# openskistats

./: .gitignore  .pre-commit-config.yaml  README.md  _variables.yaml  index.html  pyproject.toml  search.json  sitemap.xml  ski-areas.html  ski_area_metrics.parquet
.github/: renovate.json5
.github/workflows/: analyze.yaml  tests.yaml
.github/workflows/setup-python/: action.yaml
.github/workflows/setup-quarto/: action.yaml
.github/workflows/setup-r/: action.yaml
images/data/: bearings_48_ls.rds  country_roses.parquet  dartmouth_runs.parquet  dartmouth_segs.parquet  hemisphere_roses.parquet  hemisphere_status_roses.parquet  region_roses.parquet  skiway_run_coordinates.parquet
index/: style.css
manuscript/: index.html
openskimap/: info.json  ski_areas.geojson.xz
openskistats/: analyze.py  bearing.py  changeset.py  commands.py  counts.py  display.py  elevation.py  maps.py  models.py  openskimap_utils.py  osmnx_utils.py  plot.py  plot_runs.py  plot_ski_areas.py  sunlight.py  utils.py  variables.py
openskistats/nesh/: new_england_ski_history_timelines.json  timelines.py
openskistats/nesh/tests/: test_timelines.py
openskistats/tests/: test_bearing.py  test_elevation.py  test_sunlight.py  test_utils.py
openskistats/tests/data/: _variables.yaml
openskistats/tests/data/openskimap/: info.json  lifts.geojson  runs.geojson  ski_areas.geojson
r/: .lintr  01.data.R  02.plot.R  DESCRIPTION
site_libs/bootstrap/: bootstrap-0629875db7c1d588856732c16bef102a.min.css  bootstrap-06d67e79788d3b7feab677f32df65e68.min.css  bootstrap-0daac82027e527c1166f09743b1308df.min.css  bootstrap-28d3a66294911c59f162db0fe602e939.min.css  bootstrap-c892f474be653ad3d648e65a482c5ef8.min.css
ski-areas/: index.html
skirolly/: index.html
story/: index.html
webapp/: index.html  listings.json  search.json  sitemap.xml
webapp/index/: style.css
webapp/manuscript/: index.html
webapp/site_libs/bootstrap/: bootstrap-0b4ac6307cdd3e60870991ba5f005a72.min.css  bootstrap-24e35be6076790a1263825731fe92770.min.css  bootstrap-61cc4d8a03e18934647f8238365b3118.min.css  bootstrap-7dcac99164fe54a3f81927ad9a1d7fcb.min.css  bootstrap-b9fb8627b077c1e624db98f2bf5c3d5f.min.css
webapp/ski-areas/: index.html
webapp/story/: index.html
website/: .gitignore  _quarto.yml  _variables.yaml  index.qmd
website/common/: matomo.html
website/index/: style.css
website/manuscript/: index.qmd  references.yml
website/ski-areas/: index.qmd  script.js
website/skirolly/: 02.plot.R  index.qmd
website/story/: 02.plot.R  index.qmd
