[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[project]
name = "openskistats"
version = "0.1.0"
description = "OpenSkiStats: Shredding Data Like Powder"
authors = [
    {name = "Daniel Himmelstein"},
    {name = "Trang Le"},
]
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = "==3.13.*"

[tool.pixi.dependencies]
quarto = "==1.8.25"

[tool.pixi.pypi-dependencies]
openskistats = { path = ".", editable = true }
beautifulsoup4 = "==4.14.2"
folium = "==0.20.0"
# https://github.com/machow/reactable-py/issues/29
great-tables = "==0.19.0" 
jupyter = "==1.1.1"
matplotlib = "==3.10.7"
mizani = "==0.14.2"
networkx = "==3.5"
numpy = "==2.3.4"
osmnx = "==2.0.6"
patito = "==0.8.4"
plotly = "==6.3.1"
plotnine = "==0.15.0"
polars= "==1.27.0"
pvlib= "==0.13.1"
pyarrow = "==22.0.0"
reactable = "==0.1.6"
requests = "==2.32.5"
rich= "==14.2.0"
typer = "==0.20.0"

[tool.pixi.feature.dev.pypi-dependencies]
pre-commit = "==4.3.0"
pytest = "==8.4.2"

[tool.pixi.feature.r.dependencies]
imagemagick = "==7.1.2_8"
poppler = "==25.07.0"
r-arrow = "==18.1.0"
r-base = "==4.5.1"
r-cowplot = "==1.2.0"
r-curl = "==7.0.0"
r-dplyr = "==1.1.4"
r-ggimage = "==0.3.4"
r-ggplot2 = "==3.5.2"
r-patchwork = "==1.3.2"
r-showtext = "==0.9_7"
r-styler = "==1.11.0"
r-svglite = "==2.2.2"
r-sysfonts = "==0.8.9"
r-tidyr = "==1.3.1"

[tool.pixi.environments]
default = { features = ["dev", "r"], solve-group = "default" }
production = { features = ["r"], solve-group = "default" }

[project.urls]
"Homepage" = "https://openskistats.org"
"Repository" = "https://github.com/dhimmel/openskistats"
"Issues" = "https://github.com/dhimmel/openskistats/issues"

[project.scripts]
openskistats = "openskistats.commands:Commands.command"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
ignore = [
    "E501",  # line-too-long
]
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "C90",  # mccabe
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycode warnings
]

[tool.mypy]
python_version = "3.13"
strict = true
pretty = true
show_error_context = true
plugins = "numpy.typing.mypy_plugin"

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[[tool.mypy.overrides]]
module = [
    "networkx.*",
    "pandas.*",
    "patito.*",
    "requests.*",
]
ignore_missing_imports = true
