[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[project]
name = "openskistats"
version = "0.1.0"
description = "OpenSkiStats: Shredding Data Like Powder"
authors = [
    {name = "Daniel Himmelstein"},
    {name = "Trang Le"},
]
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = "==3.14.*"

[tool.pixi.dependencies]
# pyogrio not explicitly imported, but required to prevent a build failure with Python 3.14:
# No such file or directory: 'gdal-config'
pyogrio = "==0.12.1"
quarto = "==1.8.26"

[tool.pixi.pypi-dependencies]
openskistats = { path = ".", editable = true }
beautifulsoup4 = "==4.14.3"
folium = "==0.20.0"
# https://github.com/machow/reactable-py/issues/29
great-tables = "==0.20.0" 
jupyter = "==1.1.1"
matplotlib = "==3.10.7"
mizani = "==0.14.3"
networkx = "==3.6.1"
numpy = "==2.3.4"
osmnx = "==2.0.7"
patito = "==0.8.5"
plotly = "==6.5.0"
plotnine = "==0.15.1"
polars= "==1.36.1"
pvlib= "==0.13.1"
pyarrow = "==22.0.0"
reactable = "==0.1.6"
requests = "==2.32.5"
rich= "==14.2.0"
typer = "==0.20.0"

[tool.pixi.feature.dev.pypi-dependencies]
pre-commit = "==4.5.0"
pytest = "==8.4.2"

[tool.pixi.feature.r.dependencies]
imagemagick = "==7.1.2_8"
poppler = "==25.12.0"
r-arrow = "==18.1.0"
r-base = "==4.5.2"
r-cowplot = "==1.2.0"
r-curl = "==7.0.0"
r-dplyr = "==1.1.4"
r-ggimage = "==0.3.4"
r-ggplot2 = "==3.5.2"
r-patchwork = "==1.3.2"
r-showtext = "==0.9_7"
r-styler = "==1.11.0"
r-svglite = "==2.2.2"
r-sysfonts = "==0.8.9"
r-tidyr = "==1.3.1"

[tool.pixi.environments]
default = { features = ["dev", "r"], solve-group = "default" }
production = { features = ["r"], solve-group = "default" }

[project.urls]
"Homepage" = "https://openskistats.org"
"Repository" = "https://github.com/dhimmel/openskistats"
"Issues" = "https://github.com/dhimmel/openskistats/issues"

[project.scripts]
openskistats = "openskistats.commands:Commands.command"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
ignore = [
    "E501",  # line-too-long
]
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "C90",  # mccabe
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycode warnings
]

[tool.mypy]
python_version = "3.14"
strict = true
pretty = true
show_error_context = true

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[[tool.mypy.overrides]]
module = [
    "networkx.*",
    "pandas.*",
    "patito.*",
    "requests.*",
]
ignore_missing_imports = true
