[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[project]
name = "openskistats"
version = "0.1.0"
description = "OpenSkiStats: Shredding Data Like Powder"
authors = [
    {name = "Daniel Himmelstein"},
    {name = "Trang Le"},
]
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = "==3.14.*"

[tool.pixi.dependencies]
# pyogrio not explicitly imported, but required to prevent a build failure with Python 3.14:
# No such file or directory: 'gdal-config'
pyogrio = "==0.12.1"
quarto = "==1.8.27"

[tool.pixi.pypi-dependencies]
openskistats = { path = ".", editable = true }
beautifulsoup4 = "==4.14.3"
folium = "==0.20.0"
# https://github.com/machow/reactable-py/issues/29
great-tables = "==0.20.0" 
jupyter = "==1.1.1"
matplotlib = "==3.10.8"
mizani = "==0.14.4"
networkx = "==3.6.1"
numpy = "==2.4.0"
osmnx = "==2.0.7"
patito = "==0.8.6"
plotly = "==6.5.2"
plotnine = "==0.15.3"
polars= "==1.38.1"
pvlib= "==0.15.0"
pyarrow = "==23.0.0"
reactable = "==0.1.6"
requests = "==2.32.5"
rich= "==14.3.2"
typer = "==0.23.1"

[tool.pixi.feature.dev.pypi-dependencies]
prek = "==0.3.3"
pytest = "==9.0.2"

[tool.pixi.feature.r.dependencies]
imagemagick = "==7.1.2_8"
poppler = "==26.02.0"
r-arrow = "==22.0.0"
r-base = "==4.5.2"
r-cowplot = "==1.2.0"
r-curl = "==7.0.0"
r-dplyr = "==1.2.0"
r-ggimage = "==0.3.5"
r-ggplot2 = "==4.0.2"
r-patchwork = "==1.3.2"
r-showtext = "==0.9_7"
r-styler = "==1.11.0"
r-svglite = "==2.2.2"
r-sysfonts = "==0.8.9"
r-tidyr = "==1.3.2"

[tool.pixi.environments]
default = { features = ["dev", "r"], solve-group = "default" }
production = { features = ["r"], solve-group = "default" }

[project.urls]
"Homepage" = "https://openskistats.org"
"Repository" = "https://github.com/dhimmel/openskistats"
"Issues" = "https://github.com/dhimmel/openskistats/issues"

[project.scripts]
openskistats = "openskistats.commands:Commands.command"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
ignore = [
    "E501",  # line-too-long
]
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "C90",  # mccabe
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycode warnings
]

[tool.mypy]
python_version = "3.14"
strict = true
pretty = true
show_error_context = true

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[[tool.mypy.overrides]]
module = [
    "networkx.*",
    "pandas.*",
    "patito.*",
    "requests.*",
]
ignore_missing_imports = true
